[gd_scene load_steps=9 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://ObstacleLevel.tscn" type="PackedScene" id=4]
[ext_resource path="res://LabelsRelated.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level1.gd" type="Script" id=6]
[ext_resource path="res://Line.tscn" type="PackedScene" id=7]
[ext_resource path="res://playing.wav" type="AudioStream" id=8]

[node name="Level1" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="ObstacleLevel" parent="." instance=ExtResource( 4 )]
position = Vector2( 872, 371 )

[node name="ObstacleLevel2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1144, 275 )

[node name="ObstacleLevel3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1440, 419 )

[node name="ObstacleLevel4" parent="." instance=ExtResource( 4 )]
position = Vector2( 1728, 347 )

[node name="ObstacleLevel5" parent="." instance=ExtResource( 4 )]
position = Vector2( 2048, 163 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 115, 427 )

[node name="LabelsRelated" parent="." instance=ExtResource( 5 )]

[node name="Line" parent="." instance=ExtResource( 7 )]
position = Vector2( 2434.72, 153.645 )

[node name="Ground" parent="." instance=ExtResource( 2 )]
position = Vector2( 1.414, 645.241 )

[node name="PlayingMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="body_entered" from="ObstacleLevel/Pipe" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel/Pipe2" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel2/Pipe" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel2/Pipe2" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel3/Pipe" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel3/Pipe2" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel4/Pipe" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel4/Pipe2" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel5/Pipe" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="ObstacleLevel5/Pipe2" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="Line" to="." method="_on_Line_body_entered"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]

[editable path="ObstacleLevel"]

[editable path="ObstacleLevel2"]

[editable path="ObstacleLevel3"]

[editable path="ObstacleLevel4"]

[editable path="ObstacleLevel5"]

[editable path="Player"]

[editable path="Ground"]
